--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.4.6",
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^5.3.0",
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
+    "@types/nodemailer": "^6.4.7",
     "nodemon": "^2.0.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
